# blacklightAthenaProcessing

./: .gitignore  README.md  jobfile  pyproject.toml
blacklightAthenaProcessing/: run_and_plot_directory.py
blacklightAthenaProcessing/example_output/: isoth.out1.spec
blacklightAthenaProcessing/src/: __init__.py
blacklightAthenaProcessing/src/fluxKit/bap/: MCSpec.py  Units.py  run_multiple_jobs.py
blacklightAthenaProcessing/src/fluxKit/montecarlo/: spec2txt.py
blacklightAthenaProcessing/tests/: test_plotting_functions.py
example_data/: ff_thom_cart_i0_r10_nadara.npz  isoth.out1.proc0.00000.list  isoth.out1.proc1.00000.list  isoth.out1.proc2.00000.list  isoth.out1.proc3.00000.list
src/: __init__.py  classes.py  create_spectra.py  produce_multsnapshot_jobfile.py  testing.ipynb
src/bap/: Geodesics.py  Image.py  MCSpec.py  MultiImageStruct.py  __init__.py  plotting_utils.py  run_multiple_jobs.py
src/blacklightAthenaProc/: Image.py  MCSpec.py  create_spectra.py  plotting_utils.py
src/blacklight_athena_processing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fluxKit.egg-info/: PKG-INFO  SOURCES.txt
src/fluxKit/bap/: Image.py  plotting_utils.py
src/montecarlo/: athena_mc.py  joinlists.py  make_spectrum.py  spec2txt.py
tests/: Example.ipynb  conftest.py  test_bap_package.py
