[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blacklight-athena-processing"
version = "0.1.0"
description = "Post-processing tools for Blacklight images and AthenaMC spectra."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "astropy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bap", "montecarlo"]
